3821B1FI2/2_integral_oneapi/travin_maksim/log.txt
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/2_integral_oneapi/travin_maksim/integral_oneapi.cpp:16:37: error: invalid operands to binary expression ('const sycl::handler' and 'float')
   16 |                 float x = start + h * (idx[0] + 0.5f);
      |                                   ~ ^ ~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/2_integral_oneapi/travin_maksim/integral_oneapi.cpp:17:37: error: invalid operands to binary expression ('const sycl::handler' and 'float')
   17 |                 float y = start + h * (idx[1] + 0.5f);
      |                                   ~ ^ ~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/2_integral_oneapi/travin_maksim/integral_oneapi.cpp:15:70: error: call to deleted constructor of 'sycl::handler'
   15 |             h.parallel_for(sycl::range<2>(count, count), reduction, [=](sycl::id<2> idx, auto& sum) {
      |                                                                      ^
/opt/intel/oneapi/compiler/2025.0/bin/compiler/../../include/sycl/handler.hpp:1910:3: note: 'handler' has been explicitly marked deleted here
 1910 |   handler(const handler &) = delete;
      |   ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/2_integral_oneapi/travin_maksim/integral_oneapi.cpp:15:69: error: attempt to use a deleted function
   15 |             h.parallel_for(sycl::range<2>(count, count), reduction, [=](sycl::id<2> idx, auto& sum) {
      |                                                                     ^
/home/crazyproger/sandbox/oneapi-2025/3821B1FI2/2_integral_oneapi/travin_maksim/integral_oneapi.cpp:16:35: note: destructor of '(lambda at /home/crazyproger/sandbox/oneapi-2025/3821B1FI2/2_integral_oneapi/travin_maksim/integral_oneapi.cpp:15:69)' is implicitly deleted because field 'h' has an inaccessible destructor
   16 |                 float x = start + h * (idx[0] + 0.5f);
      |                                   ^
4 errors generated.
